# Revid

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
editor/: CMakeLists.txt
editor/src/: main.cpp
editor/src/app/: Application.cpp  Application.h
editor/src/gui/: EditorUIManager.h  ImguiHelper.h
editor/src/gui/configs/: UIFlags.cpp  UIFlags.h
editor/src/gui/dockspace/: DockspaceLayout.h
engine/: CMakeLists.txt
engine/assets/shaders/: BasicShader.frag  BasicShader.vert  GBufferShader.frag  GBufferShader.vert  LightingShader.frag  LightingShader.vert
engine/common/exceptions/: RevidRuntimeException.h
engine/common/logging/: Logging.h
engine/common/maths/: Vec.h  VecHelper.h  VectorOperatorMixin.h
engine/common/mixins/: SingeltonMixin.h
engine/common/types/: Containers.h
engine/common/utils/: FileHandler.h
engine/include/revid_engine/: Engine.h  ServiceLocater.h
engine/include/revid_engine/core/ecs/: Component.h  ComponentArray.h  ComponentManager.h  ComponentType.h  Coordinator.h  ECS.h  Entity.h  EntityManager.h  Registry.h  System.h  SystemManager.h  SystemType.h
engine/include/revid_engine/core/ecs/components/: TransformComponent.h
engine/include/revid_engine/core/ecs/components/model/: ModelComponent.h
engine/include/revid_engine/core/ecs/systems/: RenderSystem.h  TransformSystem.h
engine/include/revid_engine/core/renderer/: Mesh.h  Renderer.h  Vertex.h  VulkanRenderer.h
engine/include/revid_engine/core/renderer/utils/: VulkanBufferUtils.h  VulkanCommandBuffferUtils.h  VulkanDebugUtils.h  VulkanDepthBuffer.h  VulkanPhysicalDeviceUtils.h  VulkanQueuesUtils.h  VulkanShaderUtils.h  VulkanSwapchainUtils.h  VulkanValidationUtils.h
engine/include/revid_engine/input/: Camera.h
engine/include/revid_engine/platform/: Camera.cpp  Camera.h  CustomWindow.h  EntryPoint.h  InputHandler.cpp  InputHandler.h  Window.h
engine/include/revid_engine/renderer/: Mesh.cpp  Mesh.h  Renderer.h
engine/include/revid_engine/renderer/vulkan/: Buffer.cpp  Buffer.h  Mesh.cpp  Mesh.h  Vertex.h  VertexBuffer.cpp  VertexBuffer.h  VulkanMacros.h  VulkanRenderer.cpp  VulkanRenderer.h
engine/include/revid_engine/renderer/vulkan/utils/: VertexUtils.h  VulkanAllocation.h  VulkanBufferUtils.h  VulkanCommandBuffferUtils.h  VulkanDebugUtils.h  VulkanDepthBuffer.h  VulkanPhysicalDeviceUtils.h  VulkanQueuesUtils.h  VulkanShaderUtils.h  VulkanSwapchainUtils.h  VulkanValidationUtils.h
engine/include/revid_engine/window/: CustomWindow.h  Window.h
engine/src/: Engine.cpp
engine/src/core/ecs/: Component.cpp  ComponentArray.cpp  ComponentManager.cpp  ECS.cpp  Entity.cpp  EntityManager.cpp  SystemManager.cpp
engine/src/core/ecs/components/: TransformComponent.cpp
engine/src/core/ecs/components/model/: ModelComponent.cpp
engine/src/core/ecs/systems/: RenderSystem.cpp  RenderSystem.h
engine/src/core/renderer/: Mesh.cpp  Renderer.cpp  VulkanRenderer.cpp
engine/src/input/: Camera.cpp  InputHandler.cpp
engine/src/platform/: Application.cpp  Camera.cpp  CustomWindow.cpp  CustomWindow.h  InputHandler.cpp
engine/src/renderer/vulkan/: Mesh.cpp  Mesh.h  Vertex.h  VulkanRenderer.cpp  VulkanRenderer.h
engine/src/renderer/vulkan/utils/: VulkanBufferUtils.h  VulkanCommandBuffferUtils.h  VulkanDebugUtils.h  VulkanPhysicalDeviceUtils.h  VulkanQueuesUtils.h  VulkanShaderUtils.h  VulkanSurfaceUtils.h  VulkanSwapchain.h  VulkanSwapchainUtils.h  VulkanValidationUtils.h
engine/src/renderer/vulkan/vulkan-core/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanDevice.cpp  VulkanDevice.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanSwapchain.cpp  VulkanSwapchain.h
engine/src/window/: CustomWindow.cpp  Window.cpp
